@@ -1,0 +1,38 @@
+<?php $result =& $this->result ?>
+<!-- Logo and header -->
+<div id="header">
+    <a id="logo" href="<?php $this->_($result->webRoot) ?>" title="Home">
+    <?php if ($result->conf['site']['showLogo']) { ?>
+    <img src="<?php $this->_($result->webRoot) ?>/themes/<?php $this->_($result->theme) ?>/images/<?php $this->_($result->conf['site']['showLogo']) ?>" alt="<?php $this->_($result->conf['site']['name']) ?> Logo" /> <?php $this->_($result->conf['site']['name']) ?>
+    </a>
+    <?php } else { ?>
+    <?php $this->_($result->conf['site']['name']) ?>
+    </a>
+    <?php } //if ?>
+
+    <div id="login">
+    <?php if (isset($result->loggedOnUser)) { ?>
+        user: <a href="<?php $this->_($result->makeUrl('view','profile','user','','frmUserID|loggedOnUserID')) ?>" title="User profile"><?php $this->_($result->loggedOnUser) ?></a>
+        &nbsp;session started at <?php $this->_($result->loggedOnSince) ?>
+        <a id="logAction" href="<?php $this->_($result->makeUrl('logout','login','user')) ?>" title="logout">logout</a>
+    <?php } else { ?>
+        user: <strong>guest</strong>
+        <a id="logAction" href="<?php $this->_($result->makeUrl('','login','user')) ?>" title="login">login</a>
+    <?php } //if ?>
+    <?php if ($result->conf['debug']['showBugReporterLink']) { ?>
+        <a id="bugReporter" href="<?php $this->_($result->makeUrl('','bug','default')) ?>" title="send bug report">
+            <img src="<?php $this->_($result->webRoot) ?>/themes/<?php $this->_($result->theme) ?>/images/bug.gif" alt="send bug report" />
+        </a>
+    <?php } //if ?>
+    </div>
+</div>
+
+<!-- tab navigation -->
+<div id="nav">
+<?php if (!$result->isVerticalNav($result->conf['navigation']['stylesheet'])) { ?>
+    <?php echo $result->navigation ?>
+<?php } //if ?>
+</div>
+
+<!-- Main layout -->
+<div id="container">
