@@ -1,0 +1,30 @@
+<?php $result =& $this->result ?>
+<?php if (isset($result->blocksRight)) { ?>
+<div id="rightSidebar">
+
+<?php foreach ($result->blocksRight as $key => $valueObj) { ?>
+<div class="blockContainer">
+    <?php if ($valueObj->title_class) { ?>
+    <div class="<?php $this->_($valueObj['title_class']) ?>">
+        <?php $this->_($valueObj->title) ?>
+    </div>
+    <?php } else { ?>
+    <div class="blockHeader">
+        <?php $this->_($valueObj->title) ?>
+    </div>
+    <?php } ?> 
+
+    <?php if ($valueObj->body_class) { ?>
+    <div class="<?php $this->_($valueObj->body_class) ?>">
+        <?php echo $valueObj->content ?>
+    </div>
+    <?php } else { ?>
+    <div class="blockContent">
+        <?php echo $valueObj->content ?>
+    </div>
+    <?php } ?>
+</div>
+<?php } ?>
+<?php } ?>
+
+</div>   
