@@ -1,0 +1,1 @@
+<span <?php if ($this->result->msgGet()">{$result->msgGet()}</span>
