@@ -1,0 +1,45 @@
+<?php $result =& $this->result ?>
+<h1 class="pageTitle"><?php $this->_($result->translate('Welcome to')) ?> <?php $this->_($result->conf['site']['name']) ?></h1>
+<?php if ($result->msgGet()) { ?>
+<span><?php $result->msgGet() ?></span>
+<?php } //if ?>
+ <?php if (isset($result->preview)) { ?>
+
+<div class="newsItem">
+    <h3><?php $this->_($result->preview['title']) ?></h3>
+    <p><?php $this->_($result->preview['newsHtml']) ?></p>
+</div>
+<br /><br />
+<?php } //if ?>
+
+<p>Welcome to the <strong>Seagull Framework</strong> project. Seagull is an OO <a href="http://php.net" title="PHP"><acronym title="PHP: Hypertext Preprocessor">PHP</acronym></a> framework, with core components <acronym title="Berkeley Software Distribution">BSD</acronym> licensed, that has the following design goals:</p>
+
+<ul class="bullets">
+    <li>independence of data, logic &amp; presentation layers</li>
+    <li>extensible component architecture</li>
+    <li>reduction of repetitive programming tasks</li>
+    <li>simplifying data access</li>
+    <li>comprehensive error handling</li>
+    <li>module workflow routines</li>
+    <li>form handling without the donkey work</li>
+    <li>component reuse</li>
+    <li>authentication management</li>
+    <li>integration with <acronym title="PHP Extension and Application Repository">PEAR</acronym> libraries</li>
+    <li><acronym title="PHP: Hypertext Preprocessor">PHP</acronym> coding standards</li>
+    <li>platform/<acronym title="PHP: Hypertext Preprocessor">PHP</acronym> version/browser independence</li>
+    <li>self-generating documentation</li>
+    <li>quality end user docs</li>
+</ul>
+
+<p>Seagull works 'out of the box' and is simple to install and configure, please follow the instructions in INSTALL.txt. Developer info is availabe in the <a href="http://seagull.phpkitchen.com/docs" title="Project docs">project docs</a>.</p>
+
+<p>There are some default modules that come with the framework, these handle tasks related to:</p>
+
+<ul class="bullets">
+    <li>user/group management</li>
+    <li>content management</li>
+    <li>document management</li>
+    <li>category management</li>
+    <li>messaging</li>
+    <li>navigation</li>
+</ul>
