@@ -1,0 +1,10 @@
+<?php include $this->loadTemplate('header.html') ?>
+<?php include $this->loadTemplate('banner.html') ?>
+<?php include $this->loadTemplate('blocksLeft.html') ?>
+
+<div id="content">
+<?php  $this->result->outputBody() ?>
+</div>
+
+<?php include $this->loadTemplate('blocksRight.html') ?>
+<?php include $this->loadTemplate('footer.html') ?>
